Changed  the README file and added JS dy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Results summary component</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="index.js" defer></script>
 </head>
 <body>
 
@@ -13,7 +14,7 @@
     <section class="flex_1">
       <p class="top_text">Your Result</p>
       <div class="circular">
-        <p class="score">76</p>
+        <p class="score">0</p>
         <p class="inside_text">of 100</p>
       </div>
         
@@ -51,7 +52,7 @@
         </div>
         <p class="rating"><b>72 </b> / 100</p>
       </div>
-      <a href="#" class="btn"> Continue</a>
+      <a href="" class="btn"> Continue</a>
     </section>
   </main>
   
